add_custom_target(basedlib_test_all)

function(add_basedlib_test testName)
	add_executable(${testName} EXCLUDE_FROM_ALL ${ARGN})
	target_link_libraries(${testName} PRIVATE basedlib)
	add_dependencies(basedlib_test_all ${testName})
	add_test(NAME ${testName} COMMAND ${testName})
endfunction()

add_basedlib_test(bl_test_debounce testDebounceTimer.cpp)
add_basedlib_test(bl_test_fsm testFSM.cpp)
add_basedlib_test(bl_test_logfile testLogFile.cpp)
add_basedlib_test(bl_test_multibyte testMultibyte.cpp)
add_basedlib_test(bl_test_prettyenum testPrettyEnum.cpp)
add_basedlib_test(bl_test_ringbuffer testRingBuffer.cpp)
add_basedlib_test(bl_test_test testTest.cpp)
