add_custom_target(basedlib_test_all)

function(add_basedlib_test testName)
	add_executable(${testName} EXCLUDE_FROM_ALL ${ARGN})
	target_link_libraries(${testName} PRIVATE basedlib)
	add_dependencies(basedlib_test_all ${testName})
	add_test(NAME ${testName} COMMAND ${testName})
endfunction()

add_basedlib_test(bl_test_test Basedtest/testTest.cpp)
add_basedlib_test(bl_test_ringbuffer Container/testRingBuffer.cpp)
add_basedlib_test(bl_test_staticvector Container/testStaticVector.cpp)
add_basedlib_test(bl_test_debounce Core/testDebounceTimer.cpp)
add_basedlib_test(bl_test_fsm Core/testFSM.cpp)
add_basedlib_test(bl_test_logfile Core/testLogFile.cpp)
add_basedlib_test(bl_test_prettyenum Meta/testPrettyEnum.cpp)
add_basedlib_test(bl_test_multibyte Text/testMultibyte.cpp)
